@@ -5393,6 +5393,9 @@ the \kbd{FpXQX} $y$, namely a lift of $1/\kbd{polrecip}(y)+O(x^{\deg(y)-1})$.
 
 \fun{GEN}{FpXQX_halfgcd}{GEN x, GEN y, GEN T, GEN p}
 
+\fun{GEN}{FpXQX_resultant}{GEN x, GEN y, GEN T, GEN p} returns the resultant
+of \kbd{x} and \kbd{y}.
+
 \fun{GEN}{FpXQX_FpXQXQ_eval}{GEN f,GEN x,GEN S, GEN T,GEN p} returns
 $\kbd{f}(\kbd{x})$.
 
